1. Collection API Улучшения[#80582]